# zhcorpus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: cantonese-hokkien-plan.md  corpus-import-plan.md  dictmaster-licensing.md  fts5-performance.md
docs/references/: dictionario-hispanico-sinicum-article.html  dictionario-hispanico-sinicum-article.txt
src/zhcorpus/: __init__.py  db.py  report.py
src/zhcorpus/ingest/: cedict_parser.py  chunker.py  classics.py  corpus_extract.py  news.py  specialized.py
src/zhcorpus/mcp/: cli.py  server.py  web.py
src/zhcorpus/search/: fts.py
tests/: conftest.py  test_cedict_parser.py  test_chunker.py  test_classics_import.py  test_corpus_extract.py  test_fts_chinese.py  test_mcp_server.py  test_news_import.py  test_word_report.py
tests/dictmaster/: test_dialect_import.py  test_etymology.py  test_export.py  test_jmdict.py  test_merge.py  test_parsers.py  test_schema.py  test_translate.py
tests/fixtures/: sample_corpus.py
tools/: bench_single_char.py  download_news.py  import_classics.py  import_corpus.py  import_specialized.py  rebuild_fts.py
tools/dictmaster/: __init__.py  build_master.py  etymology.py  export.py  merge.py  schema.py
tools/dictmaster/parsers/: cedict_format.py  dialect.py  jmdict.py  wiktextract.py
tools/dictmaster/translate/: corpus_context.py  minimax_api.py  minimax_ollama.py  prompts.py
