[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhcorpus"
version = "0.1.0"
description = "Chinese corpus MCP search engine — multi-source evidence reports for AI-powered Chinese lexicography"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "numpy>=2.0",
    "lxml",
    "mwparserfromhell",
    "pypinyin",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
gpu = [
    "cupy-cuda12x",
]

[project.scripts]
zhcorpus = "zhcorpus.mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
