[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhcorpus"
version = "0.1.0"
description = "Chinese corpus MCP search engine — multi-source evidence reports for AI-powered Chinese lexicography"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "numpy>=2.0",
    "lxml",
    "mwparserfromhell",
    "pypinyin",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
gpu = [
    "cupy-cuda12x",
]
web = [
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.scripts]
zhcorpus = "zhcorpus.mcp.cli:serve"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
